--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -46,7 +46,7 @@
       </div>
       <div class="modal-body">
         <!-- Task list with checkboxes -->
-        {% for task in tasks %}
+        {% for task in backlog_tasks %}
           <div class="form-check">
             <input type="checkbox" class="form-check-input" name="selected_tasks" value="{{ task.id }}">
             <label class="form-check-label">{{ task.name }}</label>
@@ -246,6 +246,8 @@
         }
     });
     });
+
+    
     function filterTasks() {
         const selectedCategory = document.getElementById("filter").value;
         const rows = document.querySelectorAll("#backlogTable tr");
