--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -149,6 +149,9 @@
                     {{ form.stage|as_crispy_field }}
                     {{ form.assignee|as_crispy_field }}
                     {{ form.created_date|as_crispy_field }}
+
+                    <label for="hoursLogged">Hours Logged:</label>
+                    <input type="number" id="hoursLogged" name="hours_logged" min="0">
                 </div>
 
                 <!-- Modal Footer -->
@@ -265,6 +268,9 @@
 
             // Serialize the form data
             var formData = $(this).serialize();
+
+            var hoursLogged = $('#hoursLogged').val();
+            formData += '&hours_logged=' + hoursLogged;
 
             // Send an AJAX request to update the task
             $.ajax({
