--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -71,7 +71,6 @@
 
                     {
                         label:'Ideal Remaining Effort',
-                        //Hard coded data for now until we have set up live data
                         data: idealData,
                         backgroundColor: 'rgba(255, 0, 0, 0.2)', // Red
                         borderColor: 'rgba(255, 0, 0, 1)',
@@ -87,7 +86,7 @@
                         beginAtZero: true,
                         title: {
                             display: true,
-                            text: 'Remaining Effort (Hours)',
+                            text: 'Remaining Effort (Story Points)',
                             font: {
                                 size: 18
                             }
@@ -114,7 +113,6 @@
                 labels: {{ days|safe }},
                 datasets:[{
                     label: 'Accumulated Hours',
-                    {#data: {{ accumulated_hours|safe }},#}
                     data: accumulatedData,
                     backgroundColor: 'rgba(153, 102, 255, 0.2)',
                     borderColor: 'rgba(153, 102, 255, 1)',
