Update Sprint board js logic for handling populating edit task details
- added logic for initialising the select2 module for tag and populate it
- added logic for populating the assignee

--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -202,6 +202,24 @@
 
 
 <script>
+    /**
+     * Initialize the tag filter using the Select2 library.
+     * This function sets up the Select2 configuration for both
+     * the task creation and task editing modals.
+     *
+     * @param {string} selector - The DOM selector for the tag input.
+     * @param {boolean} allowTagCreation - Whether to allow creating new tags or not.
+     */
+    function initializeTagFilter(selector, allowTagCreation) {
+        // Initialize the Select2 plugin on the specified selector
+        $(selector).select2({
+            tags: allowTagCreation, // Enable or disable tag creation based on the allowTagCreation parameter
+            tokenSeparators: [','], // Specify the separators used to tokenize tags
+            allowClear: true, // Allow clearing the selected tag(s)
+            placeholder: 'Select tag(s)', // Set the placeholder text for the tag input
+            theme: 'bootstrap', // Set the theme for the Select2 dropdown
+        });
+    }
     function changeView() {
             const selectedView = document.getElementById("view").value;
             if (selectedView === "listView") {
@@ -261,12 +279,30 @@
 
     $(document).on('click', '.open-modal', function(e) {
         e.preventDefault();
-
+        initializeTagFilter('#editTaskModal #id_tags', true);   //Initialize the Select2 tag filter in the edit task modal. Function at top of the script section.
         var taskId = $(this).data('task-id');
         var url = '/sprint-boards/get_task_data/' + taskId + '/';
 
         // Make an AJAX request to fetch task data
-        $.get(url, function(data) {
+        $.get(url, function(request) {
+            const data = request.task_data; // extract the task data from the JSON response
+
+            const tags = data.tags; // extract the tags from the task data
+            // Select the tags in the select2 field
+            $('#editTaskModal #id_tags option').each(function () {
+                // Check if the tag is included in the task's tags
+                if (tags.includes($(this).text())) {
+                    $(this).prop('selected', true);
+                }
+            });
+             // Update the select2 field
+            $('#editTaskModal #id_tags').trigger('change');
+
+            // Set the assignee field value if selected
+            if (data.assignee) {
+                $('#editTaskModal #id_assignee').val(data.assignee.id);
+            }
+
             // Populate form fields with the retrieved data
             $('#editTaskModal #id_name').val(data.name);
             $('#editTaskModal #id_type').val(data.type);
