--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -346,7 +346,7 @@
                     // Handle success response
                     // Close the modal
                     $('#editTaskModal').modal('hide');
-                    // updateTaskOnScreen(response.updated_task);
+                    updateTaskOnScreen(response.updated_task);
                     
                 },
                 error: function(xhr, status, error) {
@@ -355,6 +355,7 @@
             });
         });
     });
+    
  
     
 
