Fixed modal to be able to view the data

--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -181,8 +181,9 @@
                     {{ form.status|as_crispy_field }}
                     {{ form.stage|as_crispy_field }}
                     {{ form.assignee|as_crispy_field }}
-                    {{ form.created_date|as_crispy_field }}
                     {{ form.hour|as_crispy_field }}
+                    {{ form.total_hour|as_crispy_field }}
+                    {{ form.created_date|as_crispy_field }}
                 </div>
 
                 <!-- Modal Footer -->
@@ -314,6 +315,7 @@
             $('#editTaskModal #id_status').val(data.status);
             $('#editTaskModal #id_stage').val(data.stage);
             $('#editTaskModal #id_created_date').val(data.created_date);
+            $('#editTaskModal #id_total_hour').val(data.total_hour);
             $('#updateChanges').data('task-id', taskId);
         });
 
